# ESMOS-Odoo

./: README.md  gitignore  odoo.conf.template
custom-addons/helpdesk/: README.md
helpdesk_mgmt/: README.rst  __manifest__.py
helpdesk_mgmt/controllers/: main.py
helpdesk_mgmt/i18n/: ca.po  ca_ES.po  de.po  es.po  es_AR.po  fr.po  helpdesk_mgmt.pot  hu.po  it.po  nl.po  nl_NL.po  pl.po  pt.po  pt_BR.po  sk.po  sv.po  tr.po
helpdesk_mgmt/models/: helpdesk_ticket.py  helpdesk_ticket_tag.py
helpdesk_mgmt/readme/: CONTRIBUTORS.md
helpdesk_mgmt/tests/: test_helpdesk_ticket.py
helpdesk_mgmt/views/: helpdesk_ticket_templates.xml  helpdesk_ticket_views.xml
helpdesk_mgmt_activity/: README.rst
helpdesk_mgmt_activity/i18n/: helpdesk_mgmt_activity.pot  it.po
helpdesk_mgmt_activity/models/: helpdesk_ticket.py
helpdesk_mgmt_activity/readme/: CONFIGURE.rst  CONTEXT.rst  DESCRIPTION.rst  USAGE.rst
helpdesk_mgmt_activity/views/: helpdesk_ticket_view.xml
helpdesk_mgmt_assign_method/: README.rst  __manifest__.py
helpdesk_mgmt_merge/: README.rst
helpdesk_mgmt_portal_follower/: README.rst  __manifest__.py
helpdesk_mgmt_project_domain/: README.rst  __manifest__.py
helpdesk_mgmt_stage_validation/: README.rst
helpdesk_mgmt_template/: README.rst
helpdesk_mgmt_timesheet/: README.rst  __manifest__.py
helpdesk_mgmtsystem_nonconformity/: README.rst
helpdesk_portal_restriction/: README.rst  __manifest__.py
helpdesk_ticket_close_inactive/: README.rst  __manifest__.py
helpdesk_ticket_open_tab/: README.rst  __manifest__.py
helpdesk_ticket_partner_response/: README.rst  __manifest__.py
helpdesk_ticket_related/: README.rst  __manifest__.py
helpdesk_timesheet_time_type/: README.rst  __manifest__.py
helpdesk_type/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
(+59 files in other folders)
